app/assets/stylesheets/application.css
.main-color-box {
  width: 300px;
  height: 200px;
  border: 1px solid black;
  border-radius: 15px;
  margin: 0px auto;
  display: block;
}

.side-color-box {
  width: 75px;
  height: 50px;
  border: 1px solid black;
  border-radius: 8px;
  display: block;
}

.pair-color-box {
  width: 130px;
  height: 200px;
  border: 1px solid black;
  border-radius: 8px;
  margin: 0px auto;
  display: flex;
  flex-direction: row;
}

.pair-side-color-box {
  width: 75px;
  height: 50px;
  border: 1px solid black;
  border-radius: 8px;
  display: block;
}

.meme-box {
  width: 300px;
  height: 182px;
  border: 1px solid black;
  border-radius: 15px;
  margin: 0px auto;
  display: block;
}

.center-text {
  text-align: center;
}

button {
  margin-top: 15px;
  margin-left: 2px;
  margin-right: 2px;
  padding: 10px 16px;
  font-size: 16px;
  border-radius: 15px;
  border: 1px solid #555555;
}

.sortable-list {
  display: flex;
  flex-direction: column; /* Keeps items in a column */
  gap: 0px;
  align-items: center;  /* Centers list items */
  border-radius: 5px;
}

/* .sortable-list li centers the color_vote.position numbers */
.sortable-list li { 
  display: flex;
  justify-content: center;
  align-items: center;
}

body {
  font-family: sans-serif;
  background-color: #E8E8E8
}


  
  /*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */

